bdr.BDR.scala.error
Erreur de compilation :
BDR:1: error: unclosed character literal
var lettre:String='""'""
                  ^BDR:1: error: unclosed string literal
var lettre:String='""'""
                       ^BDR:1: error: illegal start of simple expression
var lettre:String='""'""
                  ^